profiling-using-exp-runner/backup_FINAL_RESULTS/edit_experiment_2/run_2_repetition_0/energibridge.log
sampling interval: 200, target function: edit_distance_lru_cache, input size: 4
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.edit as module; board = [[0 for _ in range(4)] for _ in range(4)]；X = tuple(map(tuple, board));X = tuple(np.random.random(4)); module.edit_distance_lru_cache(X,0)
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.0951621551513675 for 0.23090087 sec of execution.
